Made necessary changes to address the color contrast accessibility issue

--- a/apps/web-mzima-client/src/app/post/post-metadata/post-metadata.component.scss
+++ b/apps/web-mzima-client/src/app/post/post-metadata/post-metadata.component.scss
@@ -64,7 +64,7 @@
     margin: 0 -8px -4px;
     align-items: flex-start;
     justify-content: flex-start;
-    color: var(--color-neutral-70);
+    color: var(--color-neutral-80);
   }
 
   &__item {
